[metadata]
name = rubies
version = 1.0.0
author = Gökhan Koçmarlı
author_email = gokhan.kocmarli@gmail.com
description = A steganography tool for hiding two images into one image.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/electricalgorithm/rubies-steganography
project_urls =
    Bug Tracker = https://github.com/electricalgorithm/rubies-steganography/issues
    repository = https://github.com/electricalgorithm/rubies-steganography
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Security

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src